# boring_software

./: CNAME  README.md  about.html  about.rst  archive.html  boringsoftware.cabal  contact.html  contact.markdown  index.html  stack.yaml
posts/: 2015-08-23-example.html
templates/: default.html
