name:                boringsoftware
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Shamash2014/boringsoftware#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          warp.buddhist@gmail.com
copyright:           2017 Author name here
category:            blog
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable boringsoftware
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll
